--- a/config-gh.toml
+++ b/config-gh.toml
@@ -1,3 +1,3 @@
 languageCode = "en-us"
 title = "Vimwiki"
-baseURL = "https://tylerangelier.github.io/vimwiki"
+baseURL = "https://notes.trangelier.dev/vimwiki"
