rm interview, move to K8, index update

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ templates/
 diary
 public
 private
+# Ignore These Files
 Private.md
 work
 content/Work.md
+content/Interview.md
+content/Austin Interview.md
 
